@@ -561,13 +561,19 @@
                              intoIterator: iter];
   }
 }
+
+- (NSUInteger)userVisibleArguments
+{
+  return [inArgs count];
+}
+
 - (NSString*)methodDeclaration
 {
   NSMutableString *declaration = [NSMutableString stringWithString: @"- "];
   NSArray *components = nil;
   NSString *returnType = nil;
   NSUInteger outCount = [outArgs count];
-  NSUInteger inCount = [inArgs count];
+  NSUInteger inCount = [self userVisibleArguments];
   NSUInteger inIndex = 0;
   NSEnumerator *argEnum = nil;
   DKArgument *arg = nil;
